# curso-computacao-grafica

./: .gitignore  README.md
Atividade_1/src/: CMakeLists.txt  MatrixIOImage.cpp  MatrixIOImage.hpp  main.cpp
Atividade_1/src/modules/: ImageWriter.cpp  MatrixReader.hpp
Atividade_1/src/utils/: CMakeLists.txt  generate_gradient.cpp
Atividade_2/: CMakeLists.txt  Doxyfile  README.md  main.cpp
Atividade_2/Mat_lib/: CMakeLists.txt  mat2.h  mat3.h  mat4.h
Atividade_2/Vec_lib/: CMakeLists.txt  vec3.h  vec4.h
Atividade_2/docs/html/: annotated.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-spec-builders_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-generated-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-port_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-internal-utils_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-port_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-pp_8h_source.html  build_2__deps_2googletest-src_2googlemock_2test_2gmock-matchers__test_8h_source.html  build_2__deps_2googletest-src_2googlemock_2test_2gmock__link__test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-assertion-result_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-death-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-matchers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-message_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-param-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-printers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-spi_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-test-part_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-typed-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__pred__impl_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__prod_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-port_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-printers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-death-test-internal_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-filepath_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-internal_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-param-util_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-port-arch_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-port_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-string_8h_source.html  (+1287 more)
Atividade_2/docs/latex/: annotated.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-spec-builders_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-assertion-result_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-message_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-printers_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-spi_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest_8h_source.tex  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-death-test-internal_8h_source.tex  classBarEnvironment.tex  classBase.tex  (+657 more)
Atividade_2/mat_lib/: mat2.h  mat3.h  mat4.h
Atividade_2/src/: color.h  mat3.h  vec3.h  vec4.h
Atividade_2/tests/: CMakeLists.txt  Vec2Test.cpp  Vec3Test.cpp  Vec4Test.cpp
Atividade_2/vec_lib/: vec2.h
Atividade_3/: CMakeLists.txt  Doxyfile  README.md
Atividade_3/src/: Loader.h  Triangle.h  main.cpp
Atividade_4/: CMakeLists.txt  Doxyfile  README.md
Atividade_4/src/: obj_render.cpp  ray.h  sphere.cpp  triangle.cpp
Atividade_5/: CMakeLists.txt  README.md
Atividade_5/src/: main.cpp  sphere_with_camera.cpp  sphere_with_hittables_scene.cpp  sphere_with_ray_bounced_sampled_camera.cpp  sphere_with_sampled_camera.cpp  sphere_with_view_direction_camera.cpp
Atividade_6/: CMakeLists.txt  Doxyfile  README.md
Atividade_6/src/: dieletrics_spheres.cpp  main.cpp  material_spheres.cpp
(+2175 files in other folders)
